Prevent product name in header from wrapping
Currently the product name in the header wraps when the space shrinks
which doesn't look great

Adding `display:inline-table` prevents that so that the product name as a
whole drops to a new line when space is shrunk

--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -60,6 +60,7 @@
 
   .govuk-header__product-name {
     @include govuk-font($size: 24);
+    display: inline-table;
   }
 
   .govuk-header__link {
